<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gönül Köprüsü</string>
    <string name="login_title">Giriş Yap</string>
    <string name="login_subtitle">E-posta veya kullanıcı adınla devam et</string>
    <string name="login_hint">Kullanıcı adı veya e-posta</string>
    <string name="password_hint">Şifre</string>
    <string name="login_button">Giriş Yap</string>
    <string name="login_google">Google ile giriş</string>
    <string name="login_register">Hesabın yok mu? Ücretsiz kayıt ol</string>
    <string name="login_forgot">Şifremi unuttum</string>
    <string name="login_error_generic">Giriş yapılamadı. Bilgilerini kontrol et.</string>
    <string name="login_error_network">Bağlantı hatası. İnternetini kontrol et.</string>
    <string name="brand_tagline">Güvenli tanışma</string>
</resources>
